--- a/CarPrice/Стоимость автомоблей.ipynb
+++ b/CarPrice/Стоимость автомоблей.ipynb
@@ -2449,7 +2449,7 @@
         "    'CatBoostRegressor'\n",
         "]\n",
         "\n",
-        "classifiers = [\n",
+        "models = [\n",
         "    LinearRegression(),\n",
         "    RandomForestRegressor(),\n",
         "    LGBMRegressor(),\n",
@@ -2458,20 +2458,20 @@
         "\n",
         "parameters = [\n",
         "    {},\n",
-        "    {'classifier__n_estimators':[101],\n",
-        "     'classifier__max_depth':[19],\n",
-        "     'classifier__random_state':[0]\n",
+        "    {'model__n_estimators':[101],\n",
+        "     'model__max_depth':[19],\n",
+        "     'model__random_state':[0]\n",
         "    },\n",
-        "    {'classifier__max_depth':[12],\n",
-        "     'classifier__learning_rate' : [0.4],\n",
-        "    'classifier__n_estimators':[111],\n",
-        "     'classifier__random_state':[0]\n",
+        "    {'model__max_depth':[12],\n",
+        "     'model__learning_rate' : [0.4],\n",
+        "    'model__n_estimators':[111],\n",
+        "     'model__random_state':[0]\n",
         "    },\n",
-        "    {'classifier__iterations':[200],\n",
-        "     'classifier__learning_rate':[0.4],\n",
-        "     'classifier__max_depth':[12],\n",
-        "     'classifier__random_seed':[0],\n",
-        "     'classifier__loss_function':['RMSE']\n",
+        "    {'model__iterations':[200],\n",
+        "     'model__learning_rate':[0.4],\n",
+        "     'model__max_depth':[12],\n",
+        "     'model__random_seed':[0],\n",
+        "     'model__loss_function':['RMSE']\n",
         "     }\n",
         "]"
       ],
@@ -2484,16 +2484,16 @@
         "id": "sZkclRQeuKxN"
       },
       "source": [
-        "def model_train(classifier, param_grid):\n",
+        "def model_train(model, param_grid):\n",
         "    '''\n",
         "    Функция принимает на вход модель и набор гиперпараметров,\n",
-        "    подбирает наилучгие гиперпараметры через GridSearchCV библиотеку, где предварительно\n",
+        "    подбирает наилучшие гиперпараметры через GridSearchCV библиотеку, где предварительно\n",
         "    колонки Power, Kilometer и car_age масштабируются\n",
         "    '''\n",
         "    preprocessor = ColumnTransformer(transformers = [('num', StandardScaler(), numeric_features)],\n",
         "                                     remainder = 'passthrough')\n",
-        "    clf = Pipeline(steps = [('preprocessor', preprocessor),\n",
-        "                        ('classifier', classifier)])\n",
+        "    clf = Pipeline(steps = [('model', model),\n",
+        "                        ('model', model)])\n",
         "    start_time = time.time()\n",
         "    grid = GridSearchCV(clf, param_grid, cv= 5, n_jobs = -1, scoring = 'neg_mean_squared_error').fit(X_train, y_train)\n",
         "    \n",
@@ -2529,8 +2529,8 @@
       },
       "source": [
         "# В цикле обучим наши модели из списка, посчитаем время предсказания и метрику RMSE, сохраним результаты в таблице\n",
-        "for name, classifier,param_grid in zip(names,classifiers, parameters):\n",
-        "    model, train_time = model_train(classifier, param_grid)\n",
+        "for name, model, param_grid in zip(names,models, parameters):\n",
+        "    model, train_time = model_train(model, param_grid)\n",
         "    model.fit(X_train, y_train)\n",
         "    start_time = time.time()\n",
         "    y_pred = model.predict(X_test)\n",
