--- a/CarPrice/Стоимость автомоблей.ipynb
+++ b/CarPrice/Стоимость автомоблей.ipynb
@@ -2492,7 +2492,7 @@
         "    '''\n",
         "    preprocessor = ColumnTransformer(transformers = [('num', StandardScaler(), numeric_features)],\n",
         "                                     remainder = 'passthrough')\n",
-        "    clf = Pipeline(steps = [('model', model),\n",
+        "    clf = Pipeline(steps = [('preprocessor', preprocessor),\n",
         "                        ('model', model)])\n",
         "    start_time = time.time()\n",
         "    grid = GridSearchCV(clf, param_grid, cv= 5, n_jobs = -1, scoring = 'neg_mean_squared_error').fit(X_train, y_train)\n",
